--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@bitheral/marching-cubes",
   "description": "Marching Cubes Algorithm for Three.js",
-  "version": "0.2.3",
+  "version": "0.2.5",
   "author": "Bitheral <me@bitheral.net>",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "npm run build && npm publish"
   },
   "dependencies": {
     "@types/three": "^0.144.0",
+    "simplex-noise": "^4.0.1",
     "three": "^0.145.0"
   },
   "devDependencies": {
