--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "publish": "npm run build && npm publish"
+    "build": "tsc"
   },
   "dependencies": {
     "@types/three": "^0.144.0",
